Update Events “2021-09-04-test-event-2”

--- a/content/events/2021-09-04-test-event-2.md
+++ b/content/events/2021-09-04-test-event-2.md
@@ -1,6 +1,7 @@
 ---
 title: Test Event 2
 description: This is the second test event
+image: /img/pawel-czerwinski-1518488-unsplash.jpg
 start: September 7, 2021 8:00 AM
 end: September 7, 2021 10:00 AM
 ---
